--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
+Thu 23 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add a HTML renderer function
+
 Sun 19 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Initial commit ;)
