--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 Wed 29 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add integration tests for server
 	* Add static files support
 	* Add theme directory
 
