--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Thu 30 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Name this project as Nib
+
 Wed 29 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Add integration tests for server
 	* Add static files support
