--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Sun 10 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add config.toml support
+
+Fri 01 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Initial release 0.0.1
+
 Thu 30 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Name this project as Nib
 
