--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 Sun 10 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Remove unnecessary renders and hard-coded HTML tags in wirters
 	* Release 0.0.2
 	* Add config.toml support
 
