--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Sat 23 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Refactor HTML rendiring
+
 Mon 18 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Bump version to 0.0.4
 	* Add Makefile into exclude
