--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Sun 24 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Bump version to 0.0.5
+
 Sat 23 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Add syntax highlight support for code block
 	* Refactor HTML rendiring
