--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Mon 25 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Introduce workspace for nib, nib-cli and nib-server
+
 Sun 24 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Bump version to 0.0.5
 
