--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 Mon 25 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Rename RELEASE.md HISTORY.md (due to naming similarity issue to README.md)
 	* Introduce workspace for nib, nib-cli and nib-server
 
 Sun 24 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
