--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 Mon 17 Jul 2023 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Set the default theme as blog
 	* Fix styles for sidebar and header
 
 Wed 14 Jul 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
